resturcture data and handlers
