# handlers/get.go
@@ -1,26 +1,0 @@
-package handlers
-
-import (
-	"net/http"
-
-	"github.com/acd19ml/gofolder/data"
-)
-
-// swagger:route GET /products products listProducts
-// Returns a list of products
-// responses:
-//	200: productsResponse
-
-// GetProducts returns the products from the data store
-func (p *Products) GetProducts(rw http.ResponseWriter, r *http.Request) {
-	p.l.Println("Handle GET Product")
-
-	//fetch the products from the datastore
-	lp := data.GetProducts() //list of products
-
-	//serialize the list to JSON
-	err := lp.ToJSON(rw)
-	if err != nil {
-		http.Error(rw, "Unable to marshal json", http.StatusInternalServerError)
-	}
-}
